TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_after.dot
digraph AST {
  "131283093350976" [label="Start"];
  "131283093350976" -> "131283093351120";
  "131283093351120" [label="Code"];
  "131283093351120" -> "131283093351312";
  "131283093351312" [label="Function"];
  "131283093351312" -> "131283093351504";
  "131283093351312" -> "131283093351648";
  "131283093351312" -> "131283093351792";
  "131283093351504" [label="main IDENTIFIER"];
  "131283093351648" [label="Parameters"];
  "131283093351792" [label="Code"];
  "131283093351792" -> "131283093351984";
  "131283093351792" -> "131283093352560";
  "131283093351792" -> "131283093353136";
  "131283093351984" [label="Code"];
  "131283093351984" -> "131283093352176";
  "131283093352176" [label="Declaration"];
  "131283093352176" -> "131283093352368";
  "131283093352176" -> "131283093352512";
  "131283093352368" [label="x IDENTIFIER"];
  "131283093352512" [label="1 INT"];
  "131283093352560" [label="Code"];
  "131283093352560" -> "131283093352752";
  "131283093352752" [label="Declaration"];
  "131283093352752" -> "131283093352944";
  "131283093352752" -> "131283093353088";
  "131283093352944" [label="x IDENTIFIER"];
  "131283093353088" [label="2 INT"];
  "131283093353136" [label="Return"];
  "131283093353136" -> "131283093353328";
  "131283093353328" [label="0 INT"];
}
